--- a/mSystems/mSys_intro.tex
+++ b/mSystems/mSys_intro.tex
@@ -1,6 +1,5 @@
-The desire to understand the factors that influence human health and cause diseases has always been one of the major driving forces of biological research. We are populated by a myriad of microorganisms that are interacting with us in several physiological processes such as metabolism regulation or maturation of the immune system. Human microbiota has been suggested to be closely related to diseases like type 2 diabetes 
-\cite{diabetes2}, cardiovascular disease (CVD) \cite{CVD}, irritable bowel syndrome \cite{IBS}, Crohn's disease \cite{CD} or some affections as obesity \cite{ob1, ob2} or malnutrition \cite{nutr}. High throughput methods for microbial 16S ribosomal RNA gene and WGS have now begun to reveal the composition of archaeal, bacterial, fungal and viral communities located both, in and on the human body. Modern high-throughput sequencing and bioinformatics tools provide a powerful means of understanding how the human microbiome contributes to health and its potential as a target for therapeutic interventions \cite{microb&health, sysbio&microb}. 
+The desire to understand the factors that influence human health and cause diseases has always been one of the major driving forces of biological research. We are populated by a myriad of microorganisms that are interacting with us in several physiological processes such as metabolism of the bile acids \cite{bileacids}, of the choline \cite{choline} or key-route metabolites as short-chain fatty acids \cite{scfa1, scfa2} which is also involved in immune system maturation \cite{scfa3, scfa4}. Human microbiota has been suggested to be closely related to diseases like type 2 diabetes \cite{diabetes2}, cardiovascular disease (CVD) \cite{CVD}, irritable bowel syndrome \cite{IBS}, Crohn's disease \cite{CD}, some affections as obesity \cite{ob1, ob2}, malnutrition \cite{nutr} among other multiple diseases \cite{Moya_trends}. High throughput methods for microbial 16S ribosomal RNA gene and WGS have now begun to reveal the composition of archaeal, bacterial, fungal and viral communities located both, in and on the human body. Modern high-throughput sequencing and bioinformatics tools provide a powerful means of understanding how the human microbiome contributes to health and its potential as a target for therapeutic interventions \cite{microb&health}. To define normal microbiota and how it's compositional changes can origin some diseases are important issues still in need for scientific answers \cite{normal1, normal2}.
 
-Biology has recently acquired new technological and conceptual tools to investigate, model and understand living organisms at the system level, thanks to the spectacular progress in quantitative techniques, large-scale measurement methods and the integration of experimental and computational approaches. Systems Biology has mostly been devoted to the study of well-characterized model organisms but, since the early days of the Human Genome Project \cite{humangenome} it has become clear that applications of system-wide approaches to Human Biology would bring huge opportunities in Medicine. Great effort has been placed to unveil the general laws governing the behaviour of this complex system [ref]. Due to his nature, microbiota can be studied under the light of the ecology, where we can find general principles as the Taylor's law \cite{taylor}, which relates spatial or temporal variability of the population with its mean. This law, also known as fluctuation scale law, is ubiquitous in the natural world and can be found in several systems as random walks \cite{randomwalks}, stock markets \cite{economics1, economics2}, animal populations \cite{taylor, animal1, animal2}, gene expression \cite{genexpress}, or in the human genome \cite{genome}. Taylor's law has been applied to microbiota in a spatial way in the work of Zhang {\it et al.}, (2014) \cite{isme1}, where they show that this population tend to be in an aggregated way rather than in a random distribution. 
+Biology has recently acquired new technological and conceptual tools to investigate, model and understand living organisms at the system level, thanks to the spectacular progress in quantitative techniques, large-scale measurement methods and the integration of experimental and computational approaches. In particular, Systems Biology has placed a great effort to unveil the general laws governing the complex behaviour of microbial communities \cite{sysbio&microb, msys1, metasysbio}. Microbiota can be approached under the light of ecological theory where we can find, for instance, general principles as the Taylor's law \cite{taylor}, which relates spatial or temporal variability of the population with its mean. This law, also known as fluctuation scale law, is ubiquitous in the natural world and can be found in several systems as random walks \cite{randomwalks}, stock markets \cite{economics1, economics2}, animal populations \cite{taylor, animal1, animal2}, gene expression \cite{genexpress}, or in the human genome \cite{genome}. Taylor's law has been applied to microbiota in a spatial way in the work of Zhang {\it et al.}, (2014) \cite{isme1}, where they show that this population tend to be in an aggregated way rather than in a random distribution. Despite its ubiquity, it has never been applied in follow-up studies from microbiota even that a great effort has been made to infer the community structure from a dynamical point of view \cite{cobas, schloss, ravel}  
 
-Here we present the imprints of disease in macroscopic properties of the system, by studying the temporal variability in the microbiome. We have analyzed more than 35000 time series of taxa from the gut microbiome of 97 individuals obtained from publicly available high throughput sequencing data on different conditions: diseases, diets, obese status, antibiotic perturbation and healthy individuals. Having seen that all cases follows Taylor's law, we use this empirical fact to model how the relative abundances of taxa evolves toward time thanks to the Langevin equation, in a similar way as Blumm et al., did in their (2012) \cite{ranking}. We use this mathematical framework to explore the temporal stability of the microbiota in different conditions in order to understand how this affects the healthy status of the subjects. Finally, we have engineered a complete software framework, ComplexCruncher, to support the analysis of the dynamics of ranking processes in complex systems, which is ready to be implemented by other users.
+Here we present the imprints of health status (healthy or disease) in macroscopic properties of microbiota, by studying the temporal variability. We have analyzed more than 35000 time series of taxa from the gut microbiome of 97 individuals obtained from publicly available high throughput sequencing data on different conditions: diseases, diets, obese status, antibiotic therapy and healthy individuals. Having seen that all cases follows Taylor's law, we use this empirical fact to model how the relative abundances of taxa evolves toward time thanks to the Langevin equation, in a similar way as it was applied recently by Blumm {\it et al.} \cite{ranking}. We use this mathematical framework to explore the temporal stability of the microbiota in different conditions in order to understand how this affects the healthy status of the subjects. Finally, we have engineered a complete software framework, {\it ComplexCruncher}, to carry out the analysis of the temporal dynamics of microbiotas, which is ready to be implemented by other users.
